Created the Watch Live Section

--- a/MCTTYOUTHWEBSITE/assets/mobirise/css/mbr-additional.css
+++ b/MCTTYOUTHWEBSITE/assets/mobirise/css/mbr-additional.css
@@ -528,9 +528,6 @@ a:hover {
   color: #dfd9c6;
 }
 /* Scroll to top button*/
-.scrollToTop_wraper {
-  display: none;
-}
 .form-control {
   font-family: 'Rubik', sans-serif;
   font-size: 1rem;
@@ -628,8 +625,6 @@ section.lazy-placeholder:after {
 .cid-sowpM1DoO5 {
   z-index: 1000;
   width: 100%;
-  position: relative;
-  min-height: 60px;
 }
 .cid-sowpM1DoO5 nav.navbar {
   position: fixed;
@@ -729,8 +724,7 @@ section.lazy-placeholder:after {
   min-height: 70px;
   transition: all 0.3s;
   border-bottom: 1px solid transparent;
-  box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.1);
-  background: #ffffff;
+  background: rgba(255, 255, 255, 0.2);
 }
 .cid-sowpM1DoO5 .navbar.opened {
   transition: all 0.3s;
@@ -1062,13 +1056,13 @@ section.lazy-placeholder:after {
 .cid-sowuyD0JF2 {
   padding-top: 6rem;
   padding-bottom: 6rem;
-  background-color: #ffffff;
+  background-color: #bfb9d3;
 }
 .cid-sowuyD0JF2 img,
 .cid-sowuyD0JF2 .item-img {
   width: 100%;
   height: 100%;
-  height: 300px;
+  height: 200px;
   object-fit: cover;
 }
 .cid-sowuyD0JF2 .item:focus,
@@ -1104,8 +1098,774 @@ section.lazy-placeholder:after {
   color: #232323;
 }
 .cid-sowuyD0JF2 .item-title {
-  color: #2a166f;
+  color: #000000;
+  text-align: center;
 }
 .cid-sowuyD0JF2 .item-subtitle {
-  color: #55458c;
+  color: #767676;
+  text-align: center;
+}
+.cid-soyeSXhvJ4 {
+  padding-top: 5rem;
+  padding-bottom: 5rem;
+  background-color: #fafafa;
+}
+.cid-soyeSXhvJ4 .oldcost {
+  text-decoration: line-through;
+  color: #353535;
+}
+.cid-soyeSXhvJ4 .currentcost {
+  color: #232323;
+}
+.cid-soyeSXhvJ4 .card-wrapper {
+  border-radius: 4px;
+  background: #bfb9d3;
+}
+@media (min-width: 992px) {
+  .cid-soyeSXhvJ4 .text-box {
+    padding: 2rem;
+    padding-right: 4rem;
+    padding-left: 4rem;
+    padding-right: 2rem;
+  }
+}
+@media (max-width: 991px) {
+  .cid-soyeSXhvJ4 .text-box {
+    padding: 2rem;
+  }
+}
+@media (max-width: 767px) {
+  .cid-soyeSXhvJ4 .text-box {
+    padding: 1rem;
+  }
+}
+.cid-soyeSXhvJ4 .image-wrapper img {
+  width: 100%;
+  object-fit: cover;
+}
+.cid-sowLU9tl9w {
+  padding-top: 60px;
+  padding-bottom: 60px;
+  background-image: url("../../../assets/images/capture-738x433.jpg");
+}
+.cid-sowLU9tl9w .nav-tabs {
+  -webkit-justify-content: center;
+  justify-content: center;
+  -webkit-flex-wrap: wrap;
+  flex-wrap: wrap;
+  border-bottom: none;
+}
+.cid-sowLU9tl9w .nav-tabs .nav-link {
+  box-sizing: border-box;
+  color: #bfb9d3;
+  font-style: normal;
+  font-weight: 500;
+  border-radius: 3px;
+  border: 1px solid #bfb9d3;
+  padding: 1rem 3rem;
+  margin: 0.4rem .8rem !important;
+  transition: all .3s;
+}
+.cid-sowLU9tl9w .nav-tabs .nav-link:hover {
+  background-color: #6a5c9a;
+}
+.cid-sowLU9tl9w .nav-tabs .nav-link:focus {
+  box-shadow: none;
+  background-color: #6a5c9a;
+}
+.cid-sowLU9tl9w .nav-tabs .nav-link.active {
+  font-weight: 500;
+  color: #ffffff;
+  font-style: normal;
+  border: none;
+  background: #6a5c9a;
+}
+.cid-sowLU9tl9w .nav-tabs .nav-link.active:hover {
+  border: none;
+}
+.cid-sowLU9tl9w .mbr-section-subtitle {
+  color: #767676;
+}
+.cid-sowLU9tl9w p {
+  color: #767676;
+}
+.cid-sowLU9tl9w .mbr-figure {
+  -webkit-flex-shrink: 0;
+  flex-shrink: 0;
+  -webkit-align-self: flex-start;
+  align-self: flex-start;
+  padding-right: 4rem;
+}
+.cid-sowLU9tl9w .mbr-text {
+  word-break: break-word;
+}
+@media (max-width: 991px) {
+  .cid-sowLU9tl9w .mbr-figure {
+    padding-right: 0;
+    padding-left: 0;
+    padding-bottom: 2rem;
+  }
+}
+.cid-sowLU9tl9w P {
+  text-align: center;
+  color: #cccccc;
+}
+.cid-sowQBsOi2v {
+  padding-top: 60px;
+  padding-bottom: 60px;
+  position: relative;
+  background-color: #f9f9f9;
+}
+.cid-sowQBsOi2v .card {
+  border-radius: 0px;
+  margin-bottom: -1px;
+}
+.cid-sowQBsOi2v .card .card-header {
+  border-radius: 0px;
+  border: 0px;
+  padding: 0;
+}
+.cid-sowQBsOi2v .card .card-header a.panel-title {
+  margin-bottom: 0;
+  font-style: normal;
+  font-weight: 500;
+  display: block;
+  text-decoration: none !important;
+  margin-top: -1px;
+  line-height: normal;
+}
+.cid-sowQBsOi2v .card .card-header a.panel-title:focus {
+  text-decoration: none !important;
+}
+.cid-sowQBsOi2v .card .card-header a.panel-title h4 {
+  padding: 1.3rem 2rem;
+  border: 1px solid #dfdfdf;
+  margin-bottom: 0;
+}
+.cid-sowQBsOi2v .card .card-header a.panel-title h4 .sign {
+  padding-right: 1rem;
+}
+.cid-sowQBsOi2v .card .panel-body {
+  color: #767676;
+}
+.cid-soyonmqCM2 {
+  padding-top: 120px;
+  padding-bottom: 120px;
+  background-color: #2a166f;
+}
+@media (max-width: 767px) {
+  .cid-soyonmqCM2 .content {
+    text-align: center;
+  }
+  .cid-soyonmqCM2 .content > div:not(:last-child) {
+    margin-bottom: 2rem;
+  }
+}
+.cid-soyonmqCM2 .map {
+  height: 18.75rem;
+}
+@media (max-width: 767px) {
+  .cid-soyonmqCM2 .footer-lower .copyright {
+    margin-bottom: 1rem;
+    text-align: center;
+  }
+}
+.cid-soyonmqCM2 .footer-lower hr {
+  margin: 1rem 0;
+  border-color: #fff;
+  opacity: .05;
+}
+.cid-soyonmqCM2 .footer-lower .social-list {
+  padding-left: 0;
+  margin-bottom: 0;
+  list-style: none;
+  display: flex;
+  -webkit-justify-content: flex-end;
+  justify-content: flex-end;
+  -webkit-flex-wrap: wrap;
+  flex-wrap: wrap;
+}
+.cid-soyonmqCM2 .footer-lower .social-list .mbr-iconfont-social {
+  font-size: 1.3rem;
+  color: #fff;
+}
+.cid-soyonmqCM2 .footer-lower .social-list .soc-item {
+  margin: 0 .5rem;
+}
+.cid-soyonmqCM2 .footer-lower .social-list a {
+  margin: 0;
+  opacity: .5;
+  -webkit-transition: .2s linear;
+  transition: .2s linear;
+}
+.cid-soyonmqCM2 .footer-lower .social-list a:hover {
+  opacity: 1;
+}
+@media (max-width: 767px) {
+  .cid-soyonmqCM2 .footer-lower .social-list {
+    -webkit-justify-content: center;
+    justify-content: center;
+  }
+}
+.cid-soyonmqCM2 .google-map {
+  height: 25rem;
+  position: relative;
+}
+.cid-soyonmqCM2 .google-map iframe {
+  height: 100%;
+  width: 100%;
+}
+.cid-soyonmqCM2 .google-map [data-state-details] {
+  color: #6b6763;
+  font-family: Montserrat;
+  height: 1.5em;
+  margin-top: -0.75em;
+  padding-left: 1.25rem;
+  padding-right: 1.25rem;
+  position: absolute;
+  text-align: center;
+  top: 50%;
+  width: 100%;
+}
+.cid-soyonmqCM2 .google-map[data-state] {
+  background: #e9e5dc;
+}
+.cid-soyonmqCM2 .google-map[data-state="loading"] [data-state-details] {
+  display: none;
+}
+.cid-soxhJV4h5P {
+  z-index: 1000;
+  width: 100%;
+}
+.cid-soxhJV4h5P nav.navbar {
+  position: fixed;
+}
+.cid-soxhJV4h5P .dropdown-item:before {
+  font-family: Moririse2 !important;
+  content: "\e966";
+  display: inline-block;
+  width: 0;
+  position: absolute;
+  left: 1rem;
+  top: 0.5rem;
+  margin-right: 0.5rem;
+  line-height: 1;
+  font-size: inherit;
+  vertical-align: middle;
+  text-align: center;
+  overflow: hidden;
+  transform: scale(0, 1);
+  transition: all 0.25s ease-in-out;
+}
+.cid-soxhJV4h5P .dropdown-menu {
+  padding: 0;
+  border-radius: 4px;
+  box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.1);
+}
+.cid-soxhJV4h5P .dropdown-item {
+  border-bottom: 1px solid #e6e6e6;
+}
+.cid-soxhJV4h5P .dropdown-item:hover,
+.cid-soxhJV4h5P .dropdown-item:focus {
+  background: #4eb37b !important;
+  color: white !important;
+}
+.cid-soxhJV4h5P .dropdown-item:first-child {
+  border-top-left-radius: 4px;
+  border-top-right-radius: 4px;
+}
+.cid-soxhJV4h5P .dropdown-item:last-child {
+  border-bottom: none;
+  border-bottom-left-radius: 4px;
+  border-bottom-right-radius: 4px;
+}
+.cid-soxhJV4h5P .nav-dropdown .link {
+  padding: 0 0.3em !important;
+  margin: 0.667em 1em !important;
+}
+.cid-soxhJV4h5P .nav-dropdown .link.dropdown-toggle::after {
+  margin-left: 0.5rem;
+  margin-top: 0.2rem;
+}
+.cid-soxhJV4h5P .nav-link {
+  position: relative;
+}
+.cid-soxhJV4h5P .container {
+  display: flex;
+  margin: auto;
+}
+.cid-soxhJV4h5P .iconfont-wrapper {
+  color: #000000 !important;
+  font-size: 1.5rem;
+  padding-right: 0.5rem;
+}
+.cid-soxhJV4h5P .dropdown-menu,
+.cid-soxhJV4h5P .navbar.opened {
+  background: #ffffff !important;
+}
+.cid-soxhJV4h5P .nav-item:focus,
+.cid-soxhJV4h5P .nav-link:focus {
+  outline: none;
+}
+.cid-soxhJV4h5P .dropdown .dropdown-menu .dropdown-item {
+  width: auto;
+  transition: all 0.25s ease-in-out;
+}
+.cid-soxhJV4h5P .dropdown .dropdown-menu .dropdown-item::after {
+  right: 0.5rem;
+}
+.cid-soxhJV4h5P .dropdown .dropdown-menu .dropdown-item .mbr-iconfont {
+  margin-right: 0.5rem;
+  vertical-align: sub;
+}
+.cid-soxhJV4h5P .dropdown .dropdown-menu .dropdown-item .mbr-iconfont:before {
+  display: inline-block;
+  transform: scale(1, 1);
+  transition: all 0.25s ease-in-out;
+}
+.cid-soxhJV4h5P .collapsed .dropdown-menu .dropdown-item:before {
+  display: none;
+}
+.cid-soxhJV4h5P .collapsed .dropdown .dropdown-menu .dropdown-item {
+  padding: 0.235em 1.5em 0.235em 1.5em !important;
+  transition: none;
+  margin: 0 !important;
+}
+.cid-soxhJV4h5P .navbar {
+  min-height: 70px;
+  transition: all 0.3s;
+  border-bottom: 1px solid transparent;
+  background: rgba(255, 255, 255, 0.2);
+}
+.cid-soxhJV4h5P .navbar.opened {
+  transition: all 0.3s;
+}
+.cid-soxhJV4h5P .navbar .dropdown-item {
+  padding: 0.5rem 1.8rem;
+}
+.cid-soxhJV4h5P .navbar .navbar-logo img {
+  width: auto;
+}
+.cid-soxhJV4h5P .navbar .navbar-collapse {
+  justify-content: flex-end;
+  z-index: 1;
+}
+.cid-soxhJV4h5P .navbar.collapsed {
+  justify-content: center;
+}
+.cid-soxhJV4h5P .navbar.collapsed .nav-item .nav-link::before {
+  display: none;
+}
+.cid-soxhJV4h5P .navbar.collapsed.opened .dropdown-menu {
+  top: 0;
+}
+@media (min-width: 992px) {
+  .cid-soxhJV4h5P .navbar.collapsed.opened:not(.navbar-short) .navbar-collapse {
+    max-height: calc(98.5vh - 4.7rem);
+  }
+}
+.cid-soxhJV4h5P .navbar.collapsed .dropdown-menu .dropdown-submenu {
+  left: 0 !important;
+}
+.cid-soxhJV4h5P .navbar.collapsed .dropdown-menu .dropdown-item:after {
+  right: auto;
+}
+.cid-soxhJV4h5P .navbar.collapsed .dropdown-menu .dropdown-toggle[data-toggle="dropdown-submenu"]:after {
+  margin-left: 0.5rem;
+  margin-top: 0.2rem;
+  border-top: 0.35em solid;
+  border-right: 0.35em solid transparent;
+  border-left: 0.35em solid transparent;
+  border-bottom: 0;
+  top: 41%;
+}
+.cid-soxhJV4h5P .navbar.collapsed ul.navbar-nav li {
+  margin: auto;
+}
+.cid-soxhJV4h5P .navbar.collapsed .dropdown-menu .dropdown-item {
+  padding: 0.25rem 1.5rem;
+  text-align: center;
+}
+.cid-soxhJV4h5P .navbar.collapsed .icons-menu {
+  padding-left: 0;
+  padding-right: 0;
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+}
+@media (max-width: 991px) {
+  .cid-soxhJV4h5P .navbar .nav-item .nav-link::before {
+    display: none;
+  }
+  .cid-soxhJV4h5P .navbar.opened .dropdown-menu {
+    top: 0;
+  }
+  .cid-soxhJV4h5P .navbar .dropdown-menu .dropdown-submenu {
+    left: 0 !important;
+  }
+  .cid-soxhJV4h5P .navbar .dropdown-menu .dropdown-item:after {
+    right: auto;
+  }
+  .cid-soxhJV4h5P .navbar .dropdown-menu .dropdown-toggle[data-toggle="dropdown-submenu"]:after {
+    margin-left: 0.5rem;
+    margin-top: 0.2rem;
+    border-top: 0.35em solid;
+    border-right: 0.35em solid transparent;
+    border-left: 0.35em solid transparent;
+    border-bottom: 0;
+    top: 40%;
+  }
+  .cid-soxhJV4h5P .navbar .navbar-logo img {
+    height: 3rem !important;
+  }
+  .cid-soxhJV4h5P .navbar ul.navbar-nav li {
+    margin: auto;
+  }
+  .cid-soxhJV4h5P .navbar .dropdown-menu .dropdown-item {
+    padding: 0.25rem 1.5rem !important;
+    text-align: center;
+  }
+  .cid-soxhJV4h5P .navbar .navbar-brand {
+    flex-shrink: initial;
+    flex-basis: auto;
+    word-break: break-word;
+    padding-right: 2rem;
+  }
+  .cid-soxhJV4h5P .navbar .navbar-toggler {
+    flex-basis: auto;
+  }
+  .cid-soxhJV4h5P .navbar .icons-menu {
+    padding-left: 0;
+    padding-top: 0.5rem;
+    padding-bottom: 0.5rem;
+  }
+}
+.cid-soxhJV4h5P .navbar.navbar-short {
+  min-height: 60px;
+}
+.cid-soxhJV4h5P .navbar.navbar-short .navbar-logo img {
+  height: 2.5rem !important;
+}
+.cid-soxhJV4h5P .navbar.navbar-short .navbar-brand {
+  min-height: 60px;
+  padding: 0;
+}
+.cid-soxhJV4h5P .navbar-brand {
+  min-height: 70px;
+  flex-shrink: 0;
+  align-items: center;
+  margin-right: 0;
+  padding: 0;
+  transition: all 0.3s;
+  word-break: break-word;
+  z-index: 1;
+}
+.cid-soxhJV4h5P .navbar-brand .navbar-caption {
+  line-height: inherit !important;
+}
+.cid-soxhJV4h5P .navbar-brand .navbar-logo a {
+  outline: none;
+}
+.cid-soxhJV4h5P .dropdown-item.active,
+.cid-soxhJV4h5P .dropdown-item:active {
+  background-color: transparent;
+}
+.cid-soxhJV4h5P .navbar-expand-lg .navbar-nav .nav-link {
+  padding: 0;
+}
+.cid-soxhJV4h5P .nav-dropdown .link.dropdown-toggle {
+  margin-right: 1.667em;
+}
+.cid-soxhJV4h5P .nav-dropdown .link.dropdown-toggle[aria-expanded="true"] {
+  margin-right: 0;
+  padding: 0.667em 1.667em;
+}
+.cid-soxhJV4h5P .navbar.navbar-expand-lg .dropdown .dropdown-menu {
+  background: #ffffff;
+}
+.cid-soxhJV4h5P .navbar.navbar-expand-lg .dropdown .dropdown-menu .dropdown-submenu {
+  margin: 0;
+  left: 100%;
+}
+.cid-soxhJV4h5P .navbar .dropdown.open > .dropdown-menu {
+  display: block;
+}
+.cid-soxhJV4h5P ul.navbar-nav {
+  flex-wrap: wrap;
+}
+.cid-soxhJV4h5P .navbar-buttons {
+  text-align: center;
+  min-width: 170px;
+}
+.cid-soxhJV4h5P button.navbar-toggler {
+  outline: none;
+  width: 31px;
+  height: 20px;
+  cursor: pointer;
+  transition: all 0.2s;
+  position: relative;
+  align-self: center;
+}
+.cid-soxhJV4h5P button.navbar-toggler .hamburger span {
+  position: absolute;
+  right: 0;
+  width: 30px;
+  height: 2px;
+  border-right: 5px;
+  background-color: #000000;
+}
+.cid-soxhJV4h5P button.navbar-toggler .hamburger span:nth-child(1) {
+  top: 0;
+  transition: all 0.2s;
+}
+.cid-soxhJV4h5P button.navbar-toggler .hamburger span:nth-child(2) {
+  top: 8px;
+  transition: all 0.15s;
+}
+.cid-soxhJV4h5P button.navbar-toggler .hamburger span:nth-child(3) {
+  top: 8px;
+  transition: all 0.15s;
+}
+.cid-soxhJV4h5P button.navbar-toggler .hamburger span:nth-child(4) {
+  top: 16px;
+  transition: all 0.2s;
+}
+.cid-soxhJV4h5P nav.opened .hamburger span:nth-child(1) {
+  top: 8px;
+  width: 0;
+  opacity: 0;
+  right: 50%;
+  transition: all 0.2s;
+}
+.cid-soxhJV4h5P nav.opened .hamburger span:nth-child(2) {
+  transform: rotate(45deg);
+  transition: all 0.25s;
+}
+.cid-soxhJV4h5P nav.opened .hamburger span:nth-child(3) {
+  transform: rotate(-45deg);
+  transition: all 0.25s;
+}
+.cid-soxhJV4h5P nav.opened .hamburger span:nth-child(4) {
+  top: 8px;
+  width: 0;
+  opacity: 0;
+  right: 50%;
+  transition: all 0.2s;
+}
+.cid-soxhJV4h5P .navbar-dropdown {
+  padding: 0 1rem;
+  position: fixed;
+}
+.cid-soxhJV4h5P a.nav-link {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.cid-soxhJV4h5P .icons-menu {
+  flex-wrap: nowrap;
+  display: flex;
+  justify-content: center;
+  padding-left: 1rem;
+  padding-right: 1rem;
+  padding-top: 0.3rem;
+  text-align: center;
+}
+@media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) {
+  .cid-soxhJV4h5P .navbar {
+    height: 70px;
+  }
+  .cid-soxhJV4h5P .navbar.opened {
+    height: auto;
+  }
+  .cid-soxhJV4h5P .nav-item .nav-link:hover::before {
+    width: 175%;
+    max-width: calc(100% + 2rem);
+    left: -1rem;
+  }
+}
+.cid-soxi6WNMrj {
+  padding-top: 6rem;
+  padding-bottom: 6rem;
+  background-color: #2a166f;
+}
+.cid-soxi6WNMrj .mbr-section-title {
+  color: #ffffff;
+}
+.cid-soxiiGq4Nl {
+  background-image: url("../../../assets/images/watchusonline-1080x1080.jpg");
+}
+.cid-soxiiGq4Nl .number-wrap {
+  color: #ffffff;
+  text-align: center;
+}
+.cid-soxiiGq4Nl .number {
+  color: #ffffff;
+}
+.cid-soxiiGq4Nl .period {
+  display: block;
+}
+.cid-soxiiGq4Nl .dot {
+  display: none;
+}
+@media (max-width: 767px) {
+  .cid-soxiiGq4Nl .period {
+    font-size: 0.8rem;
+  }
+}
+.cid-soxiiGq4Nl .btn {
+  height: 100%;
+  margin: 0;
+}
+.cid-soxiiGq4Nl .mbr-section-btn {
+  margin-bottom: 1.2rem;
+}
+.cid-soxiiGq4Nl .mbr-section-title {
+  color: #ffffff;
+}
+.cid-soxiiGq4Nl .mbr-text {
+  color: #ffffff;
+}
+.cid-soxiiGq4Nl .icons-menu .soc-item {
+  padding-left: 8px;
+  padding-right: 8px;
+}
+.cid-soxiiGq4Nl .icons-menu .soc-item .mbr-iconfont {
+  font-size: 2rem;
+  display: flex;
+  border-radius: 50%;
+  text-align: center;
+  color: #2a166f;
+  border: 2px solid #2a166f;
+  justify-content: center;
+  align-content: center;
+  transition: all 0.3s;
+}
+.cid-soxiiGq4Nl .icons-menu .soc-item .mbr-iconfont:before {
+  padding: 0.6rem;
+}
+.cid-soxiiGq4Nl .icons-menu .soc-item .mbr-iconfont:hover {
+  background-color: #2a166f;
+  color: #ffffff;
+}
+.cid-soxjxGB2Lb {
+  padding-top: 8rem;
+  padding-bottom: 5rem;
+  background-color: #ffffff;
+}
+.cid-soxjxGB2Lb .mbr-overlay {
+  background-color: #ffffff;
+  opacity: 0.4;
+}
+.cid-soxjxGB2Lb form.mbr-form {
+  border-radius: 10px;
+  background-color: #fafafa;
+}
+@media (min-width: 992px) {
+  .cid-soxjxGB2Lb form.mbr-form {
+    padding: 3rem 2rem;
+    width: 60%;
+  }
+}
+@media (max-width: 991px) {
+  .cid-soxjxGB2Lb form.mbr-form {
+    padding: 1rem;
+  }
+}
+.cid-soxjxGB2Lb form.mbr-form .mbr-section-btn {
+  text-align: center;
+  width: 100%;
+}
+.cid-soxjxGB2Lb form.mbr-form .mbr-section-btn .btn {
+  width: 100%;
+}
+.cid-soxjxGB2Lb .mbr-section-title {
+  color: #232323;
+  text-align: center;
+}
+.cid-soxjxGB2Lb .mbr-section-subtitle {
+  text-align: center;
+}
+.cid-soxhK4iPX8 {
+  padding-top: 120px;
+  padding-bottom: 120px;
+  background-color: #2a166f;
+}
+@media (max-width: 767px) {
+  .cid-soxhK4iPX8 .content {
+    text-align: center;
+  }
+  .cid-soxhK4iPX8 .content > div:not(:last-child) {
+    margin-bottom: 2rem;
+  }
+}
+.cid-soxhK4iPX8 .map {
+  height: 18.75rem;
+}
+@media (max-width: 767px) {
+  .cid-soxhK4iPX8 .footer-lower .copyright {
+    margin-bottom: 1rem;
+    text-align: center;
+  }
+}
+.cid-soxhK4iPX8 .footer-lower hr {
+  margin: 1rem 0;
+  border-color: #fff;
+  opacity: .05;
+}
+.cid-soxhK4iPX8 .footer-lower .social-list {
+  padding-left: 0;
+  margin-bottom: 0;
+  list-style: none;
+  display: flex;
+  -webkit-justify-content: flex-end;
+  justify-content: flex-end;
+  -webkit-flex-wrap: wrap;
+  flex-wrap: wrap;
+}
+.cid-soxhK4iPX8 .footer-lower .social-list .mbr-iconfont-social {
+  font-size: 1.3rem;
+  color: #fff;
+}
+.cid-soxhK4iPX8 .footer-lower .social-list .soc-item {
+  margin: 0 .5rem;
+}
+.cid-soxhK4iPX8 .footer-lower .social-list a {
+  margin: 0;
+  opacity: .5;
+  -webkit-transition: .2s linear;
+  transition: .2s linear;
+}
+.cid-soxhK4iPX8 .footer-lower .social-list a:hover {
+  opacity: 1;
+}
+@media (max-width: 767px) {
+  .cid-soxhK4iPX8 .footer-lower .social-list {
+    -webkit-justify-content: center;
+    justify-content: center;
+  }
+}
+.cid-soxhK4iPX8 .google-map {
+  height: 25rem;
+  position: relative;
+}
+.cid-soxhK4iPX8 .google-map iframe {
+  height: 100%;
+  width: 100%;
+}
+.cid-soxhK4iPX8 .google-map [data-state-details] {
+  color: #6b6763;
+  font-family: Montserrat;
+  height: 1.5em;
+  margin-top: -0.75em;
+  padding-left: 1.25rem;
+  padding-right: 1.25rem;
+  position: absolute;
+  text-align: center;
+  top: 50%;
+  width: 100%;
+}
+.cid-soxhK4iPX8 .google-map[data-state] {
+  background: #e9e5dc;
+}
+.cid-soxhK4iPX8 .google-map[data-state="loading"] [data-state-details] {
+  display: none;
 }
