Rewriting some styles

--- a/MCTTYOUTHWEBSITE/assets/mobirise/css/mbr-additional.css
+++ b/MCTTYOUTHWEBSITE/assets/mobirise/css/mbr-additional.css
@@ -1250,7 +1250,7 @@ section.lazy-placeholder:after {
 }
 .cid-soyonmqCM2 {
   padding-top: 120px;
-  padding-bottom: 120px;
+  padding-bottom: 105px;
   background-color: #2a166f;
 }
 @media (max-width: 767px) {
@@ -1749,7 +1749,7 @@ section.lazy-placeholder:after {
 .cid-soxjxGB2Lb {
   padding-top: 8rem;
   padding-bottom: 5rem;
-  background-color: #ffffff;
+  background-image: url("../../../assets/images/background1.jpg");
 }
 .cid-soxjxGB2Lb .mbr-overlay {
   background-color: #ffffff;
